--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,4 +22,5 @@ jobs:
           pip install -r requirements-dev.txt
       - name: Run Tests
         run: |
+          make lint
           make ci
